--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Видеофон -->
     <div id="video-container">
         <video autoplay muted loop id="video-background">
-            <source src="northwestatlasbcorp.mp4" type="video/mp4">
+            <source src="space.mp4" type="video/mp4">
             <source src="northwestatlasbcorp.webm" type="video/webm">
             Ваш браузер не поддерживает тег video.
         </video>
